# smb_dev

./: .gitignore  README.md  install.sh  setup_hw.sh  setup_sim.sh  setup_sim_docker.sh  smb.repos  smb2_0.rosinstall  smb2_0_hw.rosinstall  smb_hw.repos  smb_hw.rosinstall  smb_purged.rosinstall  smb_purged_hw.rosinstall  smb_purged_sim.rosinstall
doc/: installation.md  software_install.md  willberemoved.md
drivers/spinnaker-2.4.0.143-amd64/: libgentl_2.4.0.143_amd64.deb  libspinnaker-c-dev_2.4.0.143_amd64.deb  libspinnaker-c_2.4.0.143_amd64.deb  libspinnaker-dev_2.4.0.143_amd64.deb  libspinvideo-c-dev_2.4.0.143_amd64.deb  libspinvideo-c_2.4.0.143_amd64.deb  libspinvideo-dev_2.4.0.143_amd64.deb  libspinvideo_2.4.0.143_amd64.deb  spinupdate-dev_2.4.0.143_amd64.deb  spinupdate_2.4.0.143_amd64.deb  spinview-qt-dev_2.4.0.143_amd64.deb  spinview-qt_2.4.0.143_amd64.deb
smb_desktop/: CMakeLists.txt  package.xml
smb_robot/: CMakeLists.txt  package.xml
smb_sensors/: package.xml
