<?xml version="1.0"?>
<package format="2">
  <name>smb_robot</name>
  <version>0.0.1</version>
  <description>This package collects SMB components that are used in bringing up a robot.</description>

  <maintainer email="thomas.mantel@mavt.ethz.ch">Thomas Mantel</maintainer>
  <license>GPLv3</license>
  <url type="website">http://www.github.com/ETHZ-RobotX/smb_dev</url>
  <author email="thomas.mantel@mavt.ethz.ch">Thomas Mantel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>smb_lpc</exec_depend>
  <exec_depend>smb_path_planner</exec_depend>
  <exec_depend>smb_sensors</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
